# djangopdfmaker

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  pyproject.toml  tox.ini
.github/workflows/: django-tests.yaml
djangopdfmaker/: Dockerfile  requirements.txt
djangopdfmaker/config/: urls.py  yasg.py
djangopdfmaker/config/settings/: __init__.py  base.py  celery.py  const.py  database.py  drf.py  security.py  settings.py
djangopdfmaker/src/: routes.py
djangopdfmaker/src/common/: decorators.py  enums.py  services.py  utils.py
djangopdfmaker/src/common/management/commands/: createadmin.py
djangopdfmaker/src/common/tasks/: __init__.py  clear.py
djangopdfmaker/src/core/: admin.py  models.py  serializers.py  urls.py  views.py
djangopdfmaker/src/core/migrations/: 0001_initial.py  0002_alter_generatedpdf_pdf_file_alter_task_html_file.py  0003_alter_task_html_file.py  0004_alter_task_status.py  0005_task_status_message.py  0006_remove_generatedpdf_task_task_generatedpdf.py  0007_rename_generatedpdf_task_generated_pdf.py  0008_rename_html_file_task_html_source_file_and_more.py  0009_remove_task_user.py  0010_task_is_deleted.py
djangopdfmaker/src/core/services/: __init__.py  task_service.py  view_service.py
djangopdfmaker/src/core/tasks/: __init__.py  to_pdf.py
djangopdfmaker/tests/core/: __init__.py  test_generate.py  test_get_task.py
djangopdfmaker/tests/core/fixtures/: fixt_1.html
