[tool.poetry]
name = "djangopdfmaker"
version = "0.1.0"
description = ""
authors = ["nnnLik <rslmakhmudov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
pydantic-settings = "^2.0.3"
django-cors-headers = "^4.3.0"
djangorestframework = "^3.14.0"
django-filter = "^23.3"
markdown = "^3.5.1"
drf-yasg = "^1.21.7"
psycopg2-binary = "^2.9.9"
pdfkit = "^1.0.0"
flower = "^2.0.1"
celery = "^5.3.5"
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
